tree-sitter-wit/test/corpus/all-functions.txt
=============
All Functions
=============

package foo:functions;

interface functions {
  f1: func();
  f2: func(a: u32);
  f3: func(a: u32,);
  f4: func() -> u32;
  f6: func() -> tuple<u32, u32>;
  f7: func(a: f32, b: f32) -> tuple<u32, u32>;
  f8: func(a: option<u32>) -> result<u32, f32>;
  f9: func() -> (u: u32, f: f32);
  f10: func() -> (u: u32);
  f11: func() -> ();
}

---

(source_file
  (package_decl
    (fully_qualified_package_name
      (package_name
        (identifier))
      (package_path
        (identifier))))
  (top_level_item
    (interface_item
      (identifier)
      (interface_items
        (func_item
          (identifier)
          (func_type
            (param_list))))
      (interface_items
        (func_item
          (identifier)
          (func_type
            (param_list
              (named_type
                (identifier)
                (ty
                  (builtins)))))))
      (interface_items
        (func_item
          (identifier)
          (func_type
            (param_list
              (named_type
                (identifier)
                (ty
                  (builtins)))))))
      (interface_items
        (func_item
          (identifier)
          (func_type
            (param_list)
            (result_list
              (ty
                (builtins))))))
      (interface_items
        (func_item
          (identifier)
          (func_type
            (param_list)
            (result_list
              (ty
                (tuple
                  (ty
                    (builtins))
                  (ty
                    (builtins))))))))
      (interface_items
        (func_item
          (identifier)
          (func_type
            (param_list
              (named_type
                (identifier)
                (ty
                  (user_defined_type
                    (identifier))))
              (named_type
                (identifier)
                (ty
                  (user_defined_type
                    (identifier)))))
            (result_list
              (ty
                (tuple
                  (ty
                    (builtins))
                  (ty
                    (builtins))))))))
      (interface_items
        (func_item
          (identifier)
          (func_type
            (param_list
              (named_type
                (identifier)
                (ty
                  (option
                    (ty
                      (builtins))))))
            (result_list
              (ty
                (result
                  (ty
                    (builtins))
                  (ty
                    (user_defined_type
                      (identifier)))))))))
      (interface_items
        (func_item
          (identifier)
          (func_type
            (param_list)
            (result_list
              (named_result_list
                (named_type
                  (identifier)
                  (ty
                    (builtins)))
                (named_type
                  (identifier)
                  (ty
                    (user_defined_type
                      (identifier)))))))))
      (interface_items
        (func_item
          (identifier)
          (func_type
            (param_list)
            (result_list
              (named_result_list
                (named_type
                  (identifier)
                  (ty
                    (builtins))))))))
      (interface_items
        (func_item
          (identifier)
          (func_type
            (param_list)
            (result_list)))))))
