tree-sitter-wit/test/corpus/all-resources.txt
=============
All Resources
=============

package foo:bar;

interface foo {
  resource a { }

  resource b {
    constructor();
  }

  resource c {
    constructor(x: u32);
  }

  resource d {
    constructor(x: u32);

    a: func();

    b: static func();
  }

  resource e {
    constructor(other: own<e>, other2: borrow<e>);

    method: func(thing: own<e>, thing2: borrow<e>);
  }
}

world w {
  resource a;

  resource b {
  }

  resource c {
    constructor();
  }
}

interface i {
  resource a;

  type t1 = a;
  type t2 = borrow<a>;
  type t3 = borrow<t1>;
}

---

(source_file
  (package_decl
    (fully_qualified_package_name
      (package_namespace
        (identifier))
      (package_name
        (identifier))))
  (top_level_item
    (interface_item
      (identifier)
      (interface_items
        (typedef_item
          (resource_item
            (identifier))))
      (interface_items
        (typedef_item
          (resource_item
            (identifier)
            (resource_method
              (resource_constructor
                (param_list))))))
      (interface_items
        (typedef_item
          (resource_item
            (identifier)
            (resource_method
              (resource_constructor
                (param_list
                  (named_type
                    (identifier)
                    (ty
                      (builtins)))))))))
      (interface_items
        (typedef_item
          (resource_item
            (identifier)
            (resource_method
              (resource_constructor
                (param_list
                  (named_type
                    (identifier)
                    (ty
                      (builtins))))))
            (resource_method
              (func_item
                (identifier)
                (func_type
                  (param_list))))
            (resource_method
              (static_method
                (identifier)
                (func_type
                  (param_list)))))))
      (interface_items
        (typedef_item
          (resource_item
            (identifier)
            (resource_method
              (resource_constructor
                (param_list
                  (named_type
                    (identifier)
                    (ty
                      (handle
                        (owned_handle
                          (user_defined_type
                            (identifier))))))
                  (named_type
                    (identifier)
                    (ty
                      (handle
                        (borrowed_handle
                          (user_defined_type
                            (identifier)))))))))
            (resource_method
              (func_item
                (identifier)
                (func_type
                  (param_list
                    (named_type
                      (identifier)
                      (ty
                        (handle
                          (owned_handle
                            (user_defined_type
                              (identifier))))))
                    (named_type
                      (identifier)
                      (ty
                        (handle
                          (borrowed_handle
                            (user_defined_type
                              (identifier)))))))))))))))
  (top_level_item
    (world_item
      (identifier)
      (world_items
        (typedef_item
          (resource_item
            (identifier))))
      (world_items
        (typedef_item
          (resource_item
            (identifier))))
      (world_items
        (typedef_item
          (resource_item
            (identifier)
            (resource_method
              (resource_constructor
                (param_list))))))))
  (top_level_item
    (interface_item
      (identifier)
      (interface_items
        (typedef_item
          (resource_item
            (identifier))))
      (interface_items
        (typedef_item
          (type_item
            (identifier)
            (ty
              (user_defined_type
                (identifier))))))
      (interface_items
        (typedef_item
          (type_item
            (identifier)
            (ty
              (handle
                (borrowed_handle
                  (user_defined_type
                    (identifier))))))))
      (interface_items
        (typedef_item
          (type_item
            (identifier)
            (ty
              (handle
                (borrowed_handle
                  (user_defined_type
                    (identifier)))))))))))
