tree-sitter-wit/test/corpus/doc-comment-kitchen-sink.txt
========================
Doc Comment Kitchen Sink
========================

/// This is a package
package some:package;

/// An interface.
interface i {
    /// A record.
    record r {
        /// A field
        field: u32,
    }

    /// A type alias.
    type x = u32;

    /// A variant.
    variant v {
        /// An empty field
        empty,
    }

    /// Some flags.
    flags f {
        /// First flag.
        first,
    }

    /// An enum.
    enum e {
        /// An enum variant.
        variant,
    }

    /// A resource.
    resource res {
        /// The constructor.
        constructor();
        /// Some static method.
        s: static func();
        /// A normal method.
        method: func();
    }
}

---

(source_file
  (package_decl
    (attribute
      (doc_comment
        (docs)))
    (fully_qualified_package_name
      (package_namespace
        (identifier))
      (package_name
        (identifier))))
  (top_level_item
    (interface_item
      (attribute
        (doc_comment
          (docs)))
      (identifier)
      (interface_items
        (typedef_item
          (record_item
            (attribute
              (doc_comment
                (docs)))
            (identifier)
            (record_field
              (attribute
                (doc_comment
                  (docs)))
              (identifier)
              (ty
                (builtins))))))
      (interface_items
        (typedef_item
          (type_item
            (attribute
              (doc_comment
                (docs)))
            (identifier)
            (ty
              (builtins)))))
      (interface_items
        (typedef_item
          (variant_item
            (attribute
              (doc_comment
                (docs)))
            (identifier)
            (variant_case
              (attribute
                (doc_comment
                  (docs)))
              (identifier)))))
      (interface_items
        (typedef_item
          (flags_item
            (attribute
              (doc_comment
                (docs)))
            (identifier)
            (flags_case
              (attribute
                (doc_comment
                  (docs)))
              (identifier)))))
      (interface_items
        (typedef_item
          (enum_item
            (attribute
              (doc_comment
                (docs)))
            (identifier)
            (enum_case
              (attribute
                (doc_comment
                  (docs)))
              (identifier)))))
      (interface_items
        (typedef_item
          (resource_item
            (attribute
              (doc_comment
                (docs)))
            (identifier)
            (resource_method
              (resource_constructor
                (attribute
                  (doc_comment
                    (docs)))
                (param_list)))
            (resource_method
              (static_method
                (attribute
                  (doc_comment
                    (docs)))
                (identifier)
                (func_type
                  (param_list))))
            (resource_method
              (func_item
                (attribute
                  (doc_comment
                    (docs)))
                (identifier)
                (func_type
                  (param_list))))))))))
