tree-sitter-wit/test/corpus/doc-comment.txt
===========
Doc Comment
===========

/// Some package.
package local:demo;

---

(source_file
  (package_decl
    (attribute
      (doc_comment
        (docs)))
    (fully_qualified_package_name
      (package_namespace
        (identifier))
      (package_name
        (identifier)))))
