tree-sitter-wit/test/corpus/imports-with-version-number.txt
===========================
Imports with version number
===========================

package local:demo;

interface my-interface {
  use wasi:http/types@1.0.0.{request, response};
}

world my-world {
  import wasi:http/handler@1.0.0;
  export wasi:http/handler@1.0.0;
}

---

(source_file
  (package_decl
    (fully_qualified_package_name
      (package_namespace
        (identifier))
      (package_name
        (identifier))))
  (top_level_item
    (interface_item
      (identifier)
      (interface_items
        (use_item
          (use_path
            (fully_qualified_use_path
              (package_namespace
                (identifier))
              (package_name
                (identifier))
              (identifier)
              (semver)))
          (use_names_item
            (identifier))
          (use_names_item
            (identifier))))))
  (top_level_item
    (world_item
      (identifier)
      (world_items
        (import_item
          (exposable
            (exposable_path
              (fully_qualified_use_path
                (package_namespace
                  (identifier))
                (package_name
                  (identifier))
                (identifier)
                (semver))))))
      (world_items
        (export_item
          (exposable
            (exposable_path
              (fully_qualified_use_path
                (package_namespace
                  (identifier))
                (package_name
                  (identifier))
                (identifier)
                (semver)))))))))
