tree-sitter-wit/test/corpus/namespaced-use-with-alias.txt
=========================
Namespaced use with alias
=========================

use my:path/to/dependency@1.2.3-beta as dep;

---

(source_file
  (top_level_item
    (top_level_use_item
      (use_path
        (fully_qualified_use_path
          (package_name
            (identifier))
          (package_path
            (identifier)
            (identifier)
            (identifier))
          (semver)))
      (identifier))))
