tree-sitter-wit/test/corpus/package-declaration-with-nested-package.txt
=======================================
Package Declaration with nested package
:skip
=======================================

package wasi:io:some/nested/package;

---

(source_file
  (package_decl
    (fully_qualified_package_name
      (package_name
        (identifier))
      (package_path
        (identifier)
        (identifier)
        (identifier)))))
