tree-sitter-wit/test/corpus/package-declaration-with-path.txt
=============================
Package Declaration with path
=============================

package local:path/to/demo;

---

(source_file
  (package_decl
    (fully_qualified_package_name
      (package_name
        (identifier))
      (package_path
        (identifier)
        (identifier)
        (identifier)))))
