tree-sitter-wit/test/corpus/package-declaration-with-version.txt
================================
Package Declaration with version
================================

package local:demo@1.2.3;

---

(source_file
  (package_decl
    (fully_qualified_package_name
      (package_name
        (identifier))
      (package_path
        (identifier))
      (semver))))
