tree-sitter-wit/test/corpus/package-syntax1.txt
================
Package syntax 1
================

package foo:foo;

---

(source_file
  (package_decl
    (fully_qualified_package_name
      (package_namespace
        (identifier))
      (package_name
        (identifier)))))
