tree-sitter-wit/test/corpus/package-syntax3.txt
================
Package syntax 3
================

package foo:bar;

---

(source_file
  (package_decl
    (fully_qualified_package_name
      (package_namespace
        (identifier))
      (package_name
        (identifier)))))
