tree-sitter-wit/test/corpus/package-syntax4.txt
================
Package syntax 4
================

package foo:bar@2.0.0;

---

(source_file
  (package_decl
    (fully_qualified_package_name
      (package_namespace
        (identifier))
      (package_name
        (identifier))
      (semver))))
