tree-sitter-wit/test/corpus/top-level-use-fully-qualified.txt
=============================
Top level use fully qualified
=============================

use wasi:http/types@1.0.0;
use wasi:http/handler;

---

(source_file
  (top_level_item
    (top_level_use_item
      (use_path
        (fully_qualified_use_path
          (package_namespace
            (identifier))
          (package_name
            (identifier))
          (identifier)
          (semver)))))
  (top_level_item
    (top_level_use_item
      (use_path
        (fully_qualified_use_path
          (package_namespace
            (identifier))
          (package_name
            (identifier))
          (identifier))))))
