tree-sitter-wit/test/corpus/top-level-use-with-alias.txt
========================
Top Level use with alias
========================

use wasi:http/types as http-types;
use wasi:http/handler@1.2.3 as http-handler;

---

(source_file
  (top_level_item
    (top_level_use_item
      (use_path
        (fully_qualified_use_path
          (package_namespace
            (identifier))
          (package_name
            (identifier))
          (identifier)))
      (identifier)))
  (top_level_item
    (top_level_use_item
      (use_path
        (fully_qualified_use_path
          (package_namespace
            (identifier))
          (package_name
            (identifier))
          (identifier)
          (semver)))
      (identifier))))
